# cg3d-maya-casc

./: .gitignore  LICENSE  README.md  maya-casc-bridge.wpr  maya-casc-installer.wpr  pyproject.toml
.github/workflows/: python-publish.yml
installer/: core.py  installer.ui  installer_ui.py  maya_casc_installer.py
manual_install/MayaCasc_1.5.0/cascadeur/scripts/cg3dcasc/: __init__.py  maya_casc_installer.py
manual_install/MayaCasc_1.5.0/cascadeur/scripts/cg3dcasc/casc-site/cg3dcmds/: export_animation.py
manual_install/MayaCasc_1.5.0/cascadeur/scripts/cg3dcasc/casc-site/wingcarrier/: wingdbstub.py
manual_install/MayaCasc_1.5.0/cascadeur/scripts/cg3dguru/animation/: hik.py
manual_install/MayaCasc_1.5.0/cascadeur/scripts/cg3dguru/udata/: editor.py
manual_install/MayaCasc_1.5.0/cascadeur/scripts/wingcarrier/: __init__.py
manual_install/unipped_content/MayaCasc_1.1.3/: cascadeur.mod
manual_install/unipped_content/MayaCasc_1.1.3/cascadeur/scripts/cg3dcasc/: Cascadeur.ui  core.py  editor.py
manual_install/unipped_content/MayaCasc_1.1.3/cascadeur/scripts/cg3dguru/: __init__.py
manual_install/unipped_content/MayaCasc_1.5.0/: cascadeur.mod
src/cg3dcasc/: Cascadeur.ui  __init__.py  core.py  editor.py  hik.py  install_pymel.py  maya_casc_installer.py  userSetup.py
src/cg3dcasc/casc-site/cg3dcmds/: add_selected.py  create_new_set.py  export_animation.py  remove_selected.py  select_set_members.py  sync_ids.py
src/cg3dcasc/casc-site/cg3dmaya/: __init__.py  client.py  common.py  core.py  fbx.py  maya_export.py  maya_import.py  server.py
src/cg3dcasc/casc-site/cmds/maya/: wing_connect.py
src/cg3dcasc/core/: __init__.py  casc_export.py  casc_import.py  casc_qrt.py  client.py  command_port.py  common.py  exchange.py  fbx.py  hik.py  materials.py  server.py  udata.py  utils.py
src/cg3dcasc/menu/: __init__.py  connect.py  editor.py  import.py  quick_export.py
src/cg3dcasc/menu/utils/: __init__.py  convert_textures.py  create_proxy_rig.py  derig.py  hik_from_proxy.py  sync_casc_id.py
src/cg3dcasc/preferences/: core.py  editor.py  preferences.ui
src/installer/: core.py  installer.ui  installer_ui.py  maya_casc_installer.py  promotes.py
(+43 files in other folders)
