[build-system]
requires = ["setuptools>=61.0","setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cg3d-maya-casc"
version = "1.1.3"
authors = [
  { name="Nathaniel A", email="developer@3dcg.guru" },
]

description = "Easily bridge data between Maya and Cascadeur with this Maya Module"
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pymel==1.5.0",
    "cg3d-maya-core==0.7.0",
    "wing-carrier==1.1.1"
]

[project.urls]
"Homepage" = "https://github.com/Nathanieljla/cg3d-maya-casc"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.ui"]
